feat: Add new templates for image gallery, carousel, video player, notification center, search results, empty state, before/after, and file upload, alongside new components for headings, table,

--- a/assets/layout/footer.html
+++ b/assets/layout/footer.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="/components.html">Components</a></li>
           <li><a href="/template.html">Templates</a></li>
-          <li><a href="#">Changelog</a></li>
+          <li><a href="/changelog.html">Changelog</a></li>
         </ul>
       </div>
       <div class="footer-links">
