--- a/assets/layout/navbar.html
+++ b/assets/layout/navbar.html
@@ -19,8 +19,8 @@
       <a href="/" class="nav-link">Home</a>
       <a href="/components.html" class="nav-link">Components</a>
       <a href="/template.html" class="nav-link">Templates</a>
-      <a href="changelog.html" class="nav-link">
-        <i class="fab fa-github"></i>
+      <a href="/changelog.html" class="nav-link">
+        <i class="fas fa-history"></i>
       </a>
     </div>
   </div>
